--- a/src/main/resources/fxml/pictureFrame.fxml
+++ b/src/main/resources/fxml/pictureFrame.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane prefHeight="1080.0" prefWidth="1920.0" snapToPixel="false" style="-fx-background-color: dimgray;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.FullScreenImageController">
+<AnchorPane prefHeight="1080.0" prefWidth="1920.0" snapToPixel="false" style="-fx-background-color: dimgray;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.FullScreenImageController">
    <children>
       <ImageView fx:id="ivfullscreenImage" fitHeight="1079.0" fitWidth="1920.0" pickOnBounds="true" preserveRatio="true" smooth="true" />
       <BorderPane prefHeight="1080.0" prefWidth="1920.0" style="-fx-background-color: TRANSPARENT;">
@@ -47,12 +47,12 @@
          <bottom>
             <Pane fx:id="planbottom" prefHeight="150.0" prefWidth="600.0" style="-fx-background-color: rgba(50,50, 50, 0.5);" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="button5" layoutX="1078.0" mnemonicParsing="false" onAction="#onFilter4Pressed" prefHeight="150.0" prefWidth="100.0" />
-                  <Button fx:id="button6" layoutX="628.0" mnemonicParsing="false" onAction="#onFilter3Pressed" prefHeight="150.0" prefWidth="100.0" />
-                  <Button fx:id="button9" layoutX="928.0" mnemonicParsing="false" onAction="#onFilter5Pressed" prefHeight="150.0" prefWidth="100.0" />
-                  <Button fx:id="button7" layoutX="1228.0" mnemonicParsing="false" onAction="#onFilter2Pressed" prefHeight="150.0" prefWidth="100.0" />
-                  <Button fx:id="button8" layoutX="778.0" mnemonicParsing="false" onAction="#onFilter1Pressed" prefHeight="150.0" prefWidth="100.0" />
                   <Pane layoutX="728.0" prefHeight="150.0" prefWidth="50.0" />
+                  <ImageView fx:id="filterView1" fitHeight="150.0" fitWidth="100.0" layoutX="628.0" onMouseClicked="#onFilter1Pressed" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="filterView2" fitHeight="150.0" fitWidth="100.0" layoutX="778.0" onMouseClicked="#onFilter2Pressed" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="filterView3" fitHeight="150.0" fitWidth="100.0" layoutX="928.0" onMouseClicked="#onFilter3Pressed" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="filterView4" fitHeight="150.0" fitWidth="100.0" layoutX="1078.0" onMouseClicked="#onFilter4Pressed" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="filterView5" fitHeight="150.0" fitWidth="100.0" layoutX="1228.0" onMouseClicked="#onFilter5Pressed" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
          </bottom>
