--- a/src/main/resources/fxml/pictureFrame.fxml
+++ b/src/main/resources/fxml/pictureFrame.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -45,15 +47,21 @@
             </Pane>
          </top>
          <bottom>
-            <Pane fx:id="planbottom" prefHeight="150.0" prefWidth="600.0" style="-fx-background-color: rgba(50,50, 50, 0.5);" BorderPane.alignment="CENTER">
+            <Pane fx:id="planbottom" prefHeight="180.0" prefWidth="600.0" style="-fx-background-color: rgba(50,50, 50, 0.5);" BorderPane.alignment="CENTER">
                <children>
                   <Pane layoutX="728.0" prefHeight="150.0" prefWidth="50.0" />
-                  <ImageView fx:id="filterView1" fitHeight="150.0" fitWidth="100.0" layoutX="628.0" onMouseClicked="#onFilter1Pressed" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fx:id="filterView2" fitHeight="150.0" fitWidth="100.0" layoutX="778.0" onMouseClicked="#onFilter2Pressed" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fx:id="filterView3" fitHeight="150.0" fitWidth="100.0" layoutX="928.0" onMouseClicked="#onFilter3Pressed" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fx:id="filterView4" fitHeight="150.0" fitWidth="100.0" layoutX="1078.0" onMouseClicked="#onFilter4Pressed" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fx:id="filterView5" fitHeight="150.0" fitWidth="100.0" layoutX="1228.0" onMouseClicked="#onFilter5Pressed" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="filterView1" fitHeight="150.0" fitWidth="100.0" layoutX="628.0" onMouseClicked="#onFilter1Pressed" pickOnBounds="true" preserveRatio="true" y="15.0">
+                     <effect>
+                        <Blend />
+                     </effect></ImageView>
+                  <ImageView fx:id="filterView2" fitHeight="150.0" fitWidth="100.0" layoutX="778.0" onMouseClicked="#onFilter2Pressed" pickOnBounds="true" preserveRatio="true" y="15.0" />
+                  <ImageView fx:id="filterView3" fitHeight="150.0" fitWidth="100.0" layoutX="928.0" onMouseClicked="#onFilter3Pressed" pickOnBounds="true" preserveRatio="true" y="15.0" />
+                  <ImageView fx:id="filterView4" fitHeight="150.0" fitWidth="100.0" layoutX="1078.0" onMouseClicked="#onFilter4Pressed" pickOnBounds="true" preserveRatio="true" y="15.0" />
+                  <ImageView fx:id="filterView5" fitHeight="150.0" fitWidth="100.0" layoutX="1228.0" onMouseClicked="#onFilter5Pressed" pickOnBounds="true" preserveRatio="true" y="15.0" />
                </children>
+               <BorderPane.margin>
+                  <Insets />
+               </BorderPane.margin>
             </Pane>
          </bottom>
          <left>
