--- a/src/main/resources/css/costumer.css
+++ b/src/main/resources/css/costumer.css
@@ -1,14 +1,27 @@
 .root{}
 
 .button{
-   -fx-background-color: transparent;
    -fx-text-fill: black;
    -fx-font-family: HP Simplified;
+   -fx-background-repeat: no-repeat;
+   -fx-background-position: center;
+   -fx-background-size: 100%;
+   -fx-background-color: transparent;
    }
 #allpicturesview{
    -fx-pref-width: 15em;
    -fx-pref-height:2em;
 }
 #login{
-  -fx-font-size: 16px;
+  -fx-font-size: 0.5em;
+}
+#rightbutton{
+   -fx-pref-width: 60em;
+   -fx-pref-height:30em;
+   -fx-background-image: url('/images/arrowright.png');
+}
+#leftbutton{
+-fx-pref-width: 60em;
+   -fx-pref-height:30em;
+   -fx-background-image: url('/images/arrowleft.png');
 }
