--- a/src/main/resources/fxml/kameraFilterFrame.fxml
+++ b/src/main/resources/fxml/kameraFilterFrame.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.KameraFilterController">
+<GridPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.KameraFilterController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" percentWidth="100.0" />
   </columnConstraints>
@@ -29,9 +29,9 @@
          <children>
             <Label fx:id="titel" GridPane.columnIndex="1" />
             <Button fx:id="backbutton" mnemonicParsing="false" onAction="#onBackbuttonpressed" />
-            <Button mnemonicParsing="false" onAction="#onsingelPressed" GridPane.columnIndex="2" />
-            <Button mnemonicParsing="false" onAction="#onserienPressed" GridPane.columnIndex="3" />
-            <Button mnemonicParsing="false" onAction="#ontimerPressed" GridPane.columnIndex="4" />
+            <Button fx:id="singel" mnemonicParsing="false" onAction="#onsingelPressed" GridPane.columnIndex="2" />
+            <Button fx:id="serien" mnemonicParsing="false" onAction="#onserienPressed" GridPane.columnIndex="3" />
+            <Button fx:id="ontime" mnemonicParsing="false" onAction="#ontimerPressed" GridPane.columnIndex="4" />
          </children>
       </GridPane>
    </children>
