--- a/src/main/resources/fxml/shootingFrame.fxml
+++ b/src/main/resources/fxml/shootingFrame.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="gridbase" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.ShootingAdminController">
+<GridPane fx:id="gridbase" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.tuwien.sepm.ws16.qse01.gui.ShootingAdminController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" percentWidth="10.0" />
       <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" percentWidth="20.0" />
@@ -20,11 +20,12 @@
       <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
     <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
     <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" percentHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
       <RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button fx:id="canclebutton" mnemonicParsing="false" onAction="#onDemolitionPressed" text="Abbrechen" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Button fx:id="canclebutton" mnemonicParsing="false" onAction="#onDemolitionPressed" text="Abbrechen" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="5" />
       <ChoiceBox fx:id="profileChoiceBox" GridPane.columnIndex="2" GridPane.rowIndex="1" />
       <Label text="Profil:" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <font>
@@ -53,7 +54,7 @@
             </Label>
          </children>
       </GridPane>
-      <GridPane GridPane.columnIndex="2" GridPane.rowIndex="4">
+      <GridPane GridPane.columnIndex="2" GridPane.rowIndex="5">
         <columnConstraints>
           <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" percentWidth="100.0" />
         </columnConstraints>
@@ -67,5 +68,19 @@
       </GridPane>
       <Label fx:id="save1" text="Speicherort:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <Label fx:id="finallsavingplace" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+      <GridPane GridPane.columnIndex="2" GridPane.rowIndex="4">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button fx:id="bgStorage" mnemonicParsing="false" onAction="#onChooseBgStorageDirPressed" text="Speicherort wählen" textFill="WHITE" />
+            <Label fx:id="bgStorageDirLabel" text="Keine Hintergründe definiert" textFill="WHITE" GridPane.columnIndex="1" />
+         </children>
+      </GridPane>
+      <Label text="Userdefinierte Hintergründe:" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="4" />
    </children>
 </GridPane>
