--- a/src/main/resources/fxml/kameraFilterFrame.fxml
+++ b/src/main/resources/fxml/kameraFilterFrame.fxml
@@ -28,9 +28,9 @@
         </rowConstraints>
          <children>
             <Label fx:id="titel" GridPane.columnIndex="1" />
-            <Button fx:id="backbutton" mnemonicParsing="false" onAction="#onBackbuttonpressed" />
-            <Button fx:id="singel" mnemonicParsing="false" onAction="#onsingelPressed" GridPane.columnIndex="2" />
-            <Button fx:id="serien" mnemonicParsing="false" onAction="#onserienPressed" GridPane.columnIndex="3" />
+            <Button fx:id="backbutton" mnemonicParsing="false" style="-fx-background-image: url('/images/arrowleft.png');" onAction="#onBackbuttonpressed" />
+            <Button fx:id="singel" mnemonicParsing="false" style="-fx-background-image: url('/images/singleshot.png');" onAction="#onsingelPressed" GridPane.columnIndex="2" />
+            <Button fx:id="serien" mnemonicParsing="false" style="-fx-background-image: url('/images/multishot.png');" onAction="#onserienPressed" GridPane.columnIndex="3" />
             <Button fx:id="ontime" mnemonicParsing="false" onAction="#ontimerPressed" GridPane.columnIndex="4" />
          </children>
       </GridPane>
