--- a/src/main/resources/fxml/kameraFilterFrame.fxml
+++ b/src/main/resources/fxml/kameraFilterFrame.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -28,11 +29,13 @@
         </rowConstraints>
          <children>
             <Label fx:id="titel" GridPane.columnIndex="1" />
-            <Button fx:id="backbutton" mnemonicParsing="false" style="-fx-background-image: url('/images/arrowleft.png');" onAction="#onBackbuttonpressed" />
-            <Button fx:id="singel" mnemonicParsing="false" style="-fx-background-image: url('/images/singleshot.png');" onAction="#onsingelPressed" GridPane.columnIndex="2" />
-            <Button fx:id="serien" mnemonicParsing="false" style="-fx-background-image: url('/images/multishot.png');" onAction="#onserienPressed" GridPane.columnIndex="3" />
-            <Button fx:id="ontime" mnemonicParsing="false" style="-fx-background-image: url('/images/timer.png');" onAction="#ontimerPressed" GridPane.columnIndex="4" />
+            <Button fx:id="backbutton" mnemonicParsing="false" onAction="#onBackbuttonpressed" style="-fx-background-image: url('/images/arrowleft.png');" />
+            <Button fx:id="singel" mnemonicParsing="false" onAction="#onsingelPressed" style="-fx-background-image: url('/images/singleshot.png');" GridPane.columnIndex="2" />
+            <Button fx:id="serien" mnemonicParsing="false" onAction="#onserienPressed" style="-fx-background-image: url('/images/multishot.png');" GridPane.columnIndex="3" />
+            <Button fx:id="ontime" mnemonicParsing="false" onAction="#ontimerPressed" style="-fx-background-image: url('/images/timer.png');" GridPane.columnIndex="4" />
          </children>
       </GridPane>
+      <ScrollPane fx:id="filterscrollplanel" GridPane.rowIndex="1">
+      </ScrollPane>
    </children>
 </GridPane>
